refactor(ListTicketsForPublicationHandler): move access logic from ticket service to handler #NP-46595