@@ -1,18 +1,17 @@
 package no.unit.nva.publication.ticket.read;
 
-import static nva.commons.apigateway.AccessRight.MANAGE_DOI;
-import static nva.commons.apigateway.AccessRight.MANAGE_PUBLISHING_REQUESTS;
-import static nva.commons.apigateway.AccessRight.SUPPORT;
-import static nva.commons.core.attempt.Try.attempt;
 import com.amazonaws.services.lambda.runtime.Context;
 import java.net.HttpURLConnection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import java.util.stream.Stream;
 import no.unit.nva.identifiers.SortableIdentifier;
+import no.unit.nva.model.PublicationOperation;
 import no.unit.nva.publication.external.services.UriRetriever;
+import no.unit.nva.publication.model.business.Resource;
 import no.unit.nva.publication.model.business.TicketEntry;
 import no.unit.nva.publication.model.business.UserInstance;
+import no.unit.nva.publication.permission.strategy.PublicationPermissionStrategy;
 import no.unit.nva.publication.service.impl.ResourceService;
 import no.unit.nva.publication.service.impl.TicketService;
 import no.unit.nva.publication.ticket.TicketDto;
@@ -21,7 +20,6 @@ import no.unit.nva.publication.utils.RequestUtils;
 import nva.commons.apigateway.RequestInfo;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
 import nva.commons.apigateway.exceptions.ForbiddenException;
-import nva.commons.apigateway.exceptions.NotFoundException;
 import nva.commons.core.JacocoGenerated;
 
 public class ListTicketsForPublicationHandler extends TicketHandler<Void, TicketCollection> {
@@ -61,53 +59,31 @@ public class ListTicketsForPublicationHandler extends TicketHandler<Void, Ticket
 
     private List<TicketDto> fetchTickets(RequestUtils requestUtils, SortableIdentifier publicationIdentifier,
                                          UserInstance userInstance) throws ApiGatewayException {
-        var ticketEntries = isNotPublicationOwnerAndHasAccessRightsToListTickets(requestUtils, publicationIdentifier)
-                                ? fetchTicketsForElevatedUser(userInstance, publicationIdentifier)
-                                      .filter(requestUtils::isAuthorizedToManage)
-                                : fetchTicketsForPublicationOwner(publicationIdentifier, userInstance);
+        var tickets = fetchTickets(userInstance, publicationIdentifier)
+                          .filter(ticket -> isOwner(userInstance, ticket) || requestUtils.isAuthorizedToManage(ticket));
 
-        return ticketEntries.map(this::createDto).collect(Collectors.toList());
+        return tickets.map(this::createDto).toList();
     }
 
-    private boolean isNotPublicationOwnerAndHasAccessRightsToListTickets(RequestUtils requestUtils,
-                                                                         SortableIdentifier publicationIdentifier)
-        throws NotFoundException {
-        return !isPublicationOwner(requestUtils, publicationIdentifier)
-               && requestUtils.hasOneOfAccessRights(MANAGE_DOI, MANAGE_PUBLISHING_REQUESTS, SUPPORT);
+    private static Boolean isOwner(UserInstance userInstance, TicketEntry ticket) {
+        return UserInstance.fromTicket(ticket).getUsername().equals(userInstance.getUsername());
     }
 
-    private boolean isPublicationOwner(RequestUtils requestUtils, SortableIdentifier publicationIdentifier)
-        throws NotFoundException {
-        var publication = resourceService.getPublicationByIdentifier(publicationIdentifier);
-        return requestUtils.username().equals(publication.getResourceOwner().getOwner().getValue());
-    }
-
-    private Stream<TicketEntry> fetchTicketsForPublicationOwner(SortableIdentifier publicationIdentifier,
-                                                                UserInstance userInstance) throws ApiGatewayException {
-
-        return attempt(() -> resourceService.fetchAllTicketsForPublication(userInstance, publicationIdentifier))
-                   .orElseThrow(fail -> handleFetchingError(fail.getException()));
-    }
-
-    private Stream<TicketEntry> fetchTicketsForElevatedUser(UserInstance userInstance,
-                                                            SortableIdentifier publicationIdentifier)
+    private Stream<TicketEntry> fetchTickets(UserInstance userInstance, SortableIdentifier publicationIdentifier)
         throws ApiGatewayException {
+        return Optional.ofNullable(resourceService.getResourceByIdentifier(publicationIdentifier))
+                   .filter(resource -> isAllowedToListTickets(userInstance, resource))
+                   .map(resourceService::fetchAllTicketsForResource)
+                   .orElseThrow(ForbiddenException::new);
+    }
 
-        return attempt(() -> resourceService.fetchAllTicketsForUser(userInstance, publicationIdentifier))
-                   .orElseThrow(fail -> handleFetchingError(fail.getException()));
+    private boolean isAllowedToListTickets(UserInstance userInstance, Resource resource) {
+        return PublicationPermissionStrategy.create(resource.toPublication(), userInstance, uriRetriever)
+                   .allowsAction(PublicationOperation.UPDATE);
     }
 
     private TicketDto createDto(TicketEntry ticket) {
         var messages = ticket.fetchMessages(ticketService);
         return TicketDto.fromTicket(ticket, messages);
-    }
-
-    private ApiGatewayException handleFetchingError(Exception exception) {
-        return switch (exception) {
-            case NotFoundException notFoundException -> new ForbiddenException();
-            case ApiGatewayException apiGatewayException -> apiGatewayException;
-            case RuntimeException runtimeException -> throw runtimeException;
-            case null, default -> throw new RuntimeException(exception);
-        };
     }
 }
